ADWD-1892 Browse letters, load and render fulltext
- Load letter fulltext from remote Solr as JSONP
- Include MathJax to render mathematical notation (loaded via Funnel)
- Step trough all available letters
- Introduce lanes and ability to config views via GET parameter
- Add hover-popups for all actions

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,6 @@
     <title>Leibniz-Briefedition</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     {{content-for 'head'}}
 
     <link rel="stylesheet" href="assets/vendor.css">
@@ -19,6 +18,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/leibniz-frontend.js"></script>
+    <script src="assets/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
     {{content-for 'body-footer'}}
   </body>
