--- a/tests/index.html
+++ b/tests/index.html
@@ -18,12 +18,13 @@
     {{content-for 'test-head-footer'}}
   </head>
   <body>
-
     {{content-for 'body'}}
     {{content-for 'test-body'}}
+    
     <script src="assets/vendor.js"></script>
     <script src="assets/test-support.js"></script>
     <script src="assets/leibniz-frontend.js"></script>
+    <script src="assets/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script src="testem.js"></script>
     <script src="assets/test-loader.js"></script>
 
