--- a/tests/index.html
+++ b/tests/index.html
@@ -20,7 +20,8 @@
   <body>
     {{content-for 'body'}}
     {{content-for 'test-body'}}
-    
+
+    <script src="assets/intl/intl.complete.js"></script>
     <script src="assets/vendor.js"></script>
     <script src="assets/test-support.js"></script>
     <script src="assets/leibniz-frontend.js"></script>
