--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/leibniz-frontend.css">
+    <link rel="stylesheet" href="assets/fontello/css/fontello.css">
 
     {{content-for 'head-footer'}}
   </head>
