Add reference styles to account for new image markup
New ember-cli patch version requires dependencies to be updated,
run `npm install` and `bower install`. Changed tests to work with new
ember-cli and ember-intl.

--- a/tests/index.html
+++ b/tests/index.html
@@ -28,7 +28,8 @@
     <script src="assets/test-support.js"></script>
     <script src="assets/leibniz-frontend.js"></script>
     <script src="assets/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src="testem.js"></script>
+    <script src="testem.js" integrity=""></script>
+    <script src="assets/tests.js"></script>
     <script src="assets/test-loader.js"></script>
 
     <script src="test-helpers/disable-animations.js"></script>
