Load MathJax from CDN to fix production build
Installing MathJax locally was too much for ember-cli and made the
production build fail.

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="assets/leibniz-frontend.css">
     <link rel="stylesheet" href="assets/fontello/css/fontello.css">
 
-
     {{content-for 'head-footer'}}
   </head>
   <body>
@@ -20,7 +19,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/leibniz-frontend.js"></script>
-    <script src="assets/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
     {{content-for 'body-footer'}}
   </body>
