--- a/tests/index.html
+++ b/tests/index.html
@@ -28,7 +28,7 @@
     <script src="assets/test-support.js"></script>
     <script src="assets/leibniz-frontend.js"></script>
     <!-- Disabled MathJax in tests since runtime seems to be unpredictable -->
-    <!-- <script src="assets/MathJax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
+    <!-- <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script> -->
     <script src="testem.js" integrity=""></script>
     <script src="assets/tests.js"></script>
     <script src="assets/test-loader.js"></script>
