--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/leibniz-frontend.js"></script>
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
     {{content-for 'body-footer'}}
   </body>
